deploy/canary/backend-preview-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
  namespace: pdf-editor-ns
  annotations:
    blue-green: 'true'
spec:
  selector:
    app: backend-main
  ports:
  - port: 8080
    targetPort: backend-port
    protocol: TCP
